# vyper-tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  highlights.scm  jsconfig.json  package.json  pyproject.toml  setup.py  test_decorated.vy  test_simple.vy  tree-sitter.json  tsconfig.json
.github/workflows/: ci.yml
__tests__/: debug_test.c  test_complex_nested.vy  test_function_with_if.vy  test_indent.vy  test_indent_only.vy  test_just_newlines.vy
bindings/c/: tree-sitter-vyper.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vyper/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVyper/: vyper.h
bindings/swift/TreeSitterVyperTests/: TreeSitterVyperTests.swift
corpus/: comprehensive.vy  multiple_functions.vy
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: test_docstring.vy
