[package]
name = "tree-sitter-vyper"
description = "EVM Pythonic Smart Contract Language"
version = "0.0.5"
authors = ["Sam Bacha"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vyper"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/vyperlang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
